Added history table

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ pytest-pylint
 pandas
 Flask
 uwsgi
+Flask-SQLAlchemy==2.5.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+SQLAlchemy==1.4.18
+text-unidecode==1.3
